--- a/app/views/includes/_navbar.html.erb
+++ b/app/views/includes/_navbar.html.erb
@@ -12,8 +12,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><%= link_to 'Home', root_path %></li>
+            <li><%= link_to 'About', static_pages_about_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
