--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>About Team Awesome</h1>
+      <p>This is the about page for TeamAwesome's app.</p>
+    </div>
+  </div>
+</div>
