--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Hello World</h1>
-      <p>This is the home page for TeamAwesome's app.</p>
+      
+      <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+
     </div>
   </div>
 </div>
