--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Users#new</h1>
+      <p>Find me in app/views/users/new.html.erb</p>
+    </div>
+  </div>
+</div>
