--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
-<%= @user.name %>, <%= @user.email %>
+<div class="row">
+  <div class="col-md-12">
+    <%= @user.name %>, <%= @user.email %>
+  </div>
+</div>
