--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
       <h1>Sign up</h1>  
       
       <%= form_for(@user) do |f| %>
-      <%= render 'include/error_messages' %>
+      <%= render 'includes/error_messages' %>
 
       <div class="form-group">
         <%= f.label :name %>
