--- a/app/views/includes/_navbar.html.erb
+++ b/app/views/includes/_navbar.html.erb
@@ -11,9 +11,23 @@
       <%= link_to 'Awesome App', root_path, :class => "navbar-brand" %>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'About', about_path %></li>
+      <ul class="nav navbar-nav pull-right">
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+        <% if logged_in? %>
+        <li><%= link_to "Users", '#' %></li>
+
+        
+        <li><%= link_to "Profile", current_user %></li>
+        <li><%= link_to "Settings", '#' %></li>
+        <li class="divider"></li>
+        <li>
+          <%= link_to "Log out", logout_path, method: "delete" %>
+        </li>
+
+        <% else %>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
